// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callout should render successfully with alert 1`] = `
<div>
  <div class="callout callout-alert"
    role="callout">
    <div class="callout-header">Alert:
    </div>
    <div class="callout-content">An alert type callout</div>
  </div>
</div>
`;

exports[`callout should render successfully with warning 1`] = `
<div>
  <div class="callout callout-warning"
    role="callout">
    <div class="callout-header">Warning:
    </div>
    <div class="callout-content">An warning type callout</div>
  </div>
</div>
`;
